# libGPCInterproc

./: CMakeLists.txt
lib/: CMakeLists.txt  conanfile.txt
lib/include/gpc/interproc/: Lock_free_ringbuffer.hpp
lib/include/gpcinterproc/: lock_free_ringbuffer.hpp
lib/src/: gpcinterproc.cpp  lock_free_ringbuffer.cpp
tests/: CMakeLists.txt  test1.cpp
tests/test_server/: CMakeLists.txt  main.cpp
